methods.picture.MethodsPicture.scala.error
Erreur de compilation :
MethodsPicture:8: error: not found: value marqueSol
    marqueSol();
    ^MethodsPicture:12: error: not found: value marqueSol
    marqueSol();
    ^MethodsPicture:16: error: not found: value marqueSol
    marqueSol();
    ^